--- a/experience.html
+++ b/experience.html
@@ -43,8 +43,8 @@
             <p><strong>Part-time Job</strong> | Jul 2023 – Dec 2023</p>
           <p><strong>SeaFood Food Creation</strong></p>
           <ul>
-            <li>Developed a digital library catalog to help students find books easily.</li>
-            <li>Used PHP and MySQL to manage book records and user logins.</li>
+            <li>Served as a kitchen Helper, assisting in food preparation and cooking.</li>
+            <li>Catering to customer needs and ensuring food quality.</li>
           </ul>
         </div>
 
